# pygda

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/scripts/: pre_upload.py
.github/workflows/: codeql.yml  python-publish.yml
benchmark/: README.md  a2gnn.py  adagcn.py  asn.py  dane.py  gnn.py  grade.py  pairalign.py  parser.py  run.sh  run_airport.sh  run_citation.sh  run_mag.sh  run_twitch.sh  specreg.py
benchmark/graph/: README.md  a2gnn.py  adagcn.py  cwgcn.py  dane.py  grade.py  parser.py  run_all_F.sh  run_all_M.sh  run_all_P.sh  sagda.py  udagcn.py
benchmark/llm/: README.md  a2gnn.py  adagcn.py  grade.py  kbl.py  llm_bert_preprocess.py  llm_w2v_preprocess.py  origin_preprocess.py  parser.py  run1.sh  run2.sh  run3.sh  udagcn.py
benchmark/node/: a2gnn.py  acdne.py  adagcn.py  asn.py  cwgcn.py  dane.py  dgda.py  dmgnn.py  gnn.py  grade.py  jhgda.py  kbl.py  pairalign.py  run_blog.sh  sagda.py  specreg.py  strurw.py  udagcn.py
data/: README.md
docs/: ACDNE.md  CWGCN.md  DGDA.md  DMGNN.md  GRADE.md  SpecReg.md  UDAGCN.md  index.md  requirements.txt
docs/benchmark/: Overview.md
docs/cheatsheet/: Dataset Cheatsheet.md  Model Cheatsheet.md
docs/datasets/: Airport.md  Arxiv.md  Blog.md  Citation.md  Elliptic.md  Facebook.md  MAG.md  Overview.md  Squirrel.md  TUGraph.md  Twitch.md  Twitter.md
docs/metrics/: Metrics.md
docs/models/: A2GNN.md  ASN.md  AdaGCN.md  BaseGDA.md  DANE.md  DGSDA.md  GNN.md  GTrans.md  GraphATA.md  GraphCTA.md  JHGDA.md  KBL.md  (+7 more)
examples/: README.md  demo.py
pygda/: __init__.py
(+107 files in other folders)
