[build-system]
requires=["flit_core >=3.2,<4"]
build-backend="flit_core.buildapi"

[project]
name = "pygda"
version = "0.0.1"
description = "A Python library for Graph Domain Adaptation"
authors=[
    {name="pygda-team"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies=[
    "numpy",
    "scikit-learn",
    "scipy",
    "tqdm"
]