[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pygda"
dynamic = ["version"]
description = "A Python library for Graph Domain Adaptation"
authors=[
    {name="pygda-team"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies=[
    "numpy",
    "scikit-learn",
    "scipy",
    "tqdm"
]

[project.urls]
Repository = "https://github.com/pygda-team/pygda"

[tool.setuptools_scm]
